[package]
name = "photo-turntable"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
btleplug = "0.11.8"
eframe = "0.31.1"
egui_double_slider = "0.7.1"
gphoto2 = "3.4.1"
image = "0.25.6"
mime2ext = "0.1.54"
rfd = "0.15.3"
tokio = { version = "1.45.1", features = ["full", "time"] }
turbojpeg = { version = "1.3.3", features = ["image"] }
uuid = { version = "1.17.0", features = ["v4"] }
